--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>WELCOME TO MY HTML-CSS-Challenges</h1>
 
     <ul>
-        <li><a href="Challenge1/index.html"></a></li>
-        <li><a href="Challenge2/index.html"></a></li>
+        <li><a href="Challenge1/index.html">Challenge1</a></li>
+        <li><a href="Challenge2/index.html">Challenge2</a></li>
 
     </ul>
 
